--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -22,10 +22,6 @@ pipeline {
             powershell '''
               Write-Host "=== Instalando dependencias ==="
               npm ci
-
-              Write-Host "=== Instalando reporter JUnit seguro ==="
-              npm install --save-dev cypress-junit-reporter
-
               Write-Host "=== Dependencias instaladas ==="
             '''
           }
@@ -39,16 +35,12 @@ pipeline {
           dir('mi-proyecto-cypress') {
             powershell '''
               Write-Host "=== Ejecutando pruebas Cypress ==="
+              npx cypress run --spec "$env:TEST_SPEC"
 
-              # Mochawesome como siempre
-              # JUnit seguro sin romper XML
-              npx cypress run --spec "$env:TEST_SPEC" `
-                --reporter mochawesome `
-                --reporter-options "reportDir=cypress/report,overwrite=false,html=true,json=true" `
-                --reporter cypress-junit-reporter `
-                --reporter-options "mochaFile=cypress/results/results-[hash].xml"
+              $code = $LASTEXITCODE
+              Write-Host "Cypress terminó con código: $code"
 
-              Write-Host "=== Cypress finalizado ==="
+              exit 0
             '''
           }
         }
@@ -59,40 +51,52 @@ pipeline {
       steps {
         dir('mi-proyecto-cypress') {
           powershell '''
+            Write-Host "=== Copiando historial de Allure (si existe) ==="
+
             if (Test-Path "allure-report/history") {
+              Write-Host "Historial encontrado. Copiando..."
               Copy-Item -Recurse -Force "allure-report/history" "allure-results/history"
+            } else {
+              Write-Host "No existe historial previo."
             }
           '''
         }
       }
     }
 
-    stage('Backup de videos y screenshots por fecha') {
+    stage('Backup de videos y screenshots por fecha (versión A)') {
       steps {
         dir('mi-proyecto-cypress') {
           powershell '''
+            Write-Host "=== Preparando backup por fecha ==="
+
+            # Fecha YYYY-MM-DD
             $dateFolder = (Get-Date -Format "yyyy-MM-dd")
 
+            # Crear carpetas raíz si no existen
             if (!(Test-Path "videos_backup")) { New-Item -ItemType Directory -Path "videos_backup" | Out-Null }
             if (!(Test-Path "screenshots_backup")) { New-Item -ItemType Directory -Path "screenshots_backup" | Out-Null }
 
+            # Crear carpetas por fecha
             $videosDatePath = Join-Path "videos_backup" $dateFolder
             $screensDatePath = Join-Path "screenshots_backup" $dateFolder
 
             if (!(Test-Path $videosDatePath)) { New-Item -ItemType Directory -Path $videosDatePath | Out-Null }
             if (!(Test-Path $screensDatePath)) { New-Item -ItemType Directory -Path $screensDatePath | Out-Null }
 
-            Write-Host "=== Copiando SOLO videos raíz ==="
-            Get-ChildItem "cypress/videos" -File -Include *.mp4 -ErrorAction SilentlyContinue |
-              ForEach-Object {
-                Copy-Item $_.FullName -Destination (Join-Path $videosDatePath $_.Name) -Force
-              }
+            Write-Host "=== Copiando SOLO videos raíz (sin subcarpetas) ==="
+            Get-ChildItem "cypress/videos" -File -Include *.mp4 -ErrorAction SilentlyContinue | ForEach-Object {
+              $dest = Join-Path $videosDatePath $_.Name
+              Copy-Item $_.FullName -Destination $dest -Force -ErrorAction SilentlyContinue
+            }
 
-            Write-Host "=== Copiando screenshots ==="
-            Get-ChildItem -Recurse "cypress/screenshots" -Include *.png -ErrorAction SilentlyContinue |
-              ForEach-Object {
-                Copy-Item $_.FullName -Destination (Join-Path $screensDatePath $_.Name) -Force
-              }
+            Write-Host "=== Copiando screenshots (todas, recursivo) ==="
+            Get-ChildItem -Recurse "cypress/screenshots" -Include *.png -ErrorAction SilentlyContinue | ForEach-Object {
+              $dest = Join-Path $screensDatePath $_.Name
+              Copy-Item $_.FullName -Destination $dest -Force -ErrorAction SilentlyContinue
+            }
+
+            Write-Host "=== Backup por fecha completado ==="
           '''
         }
       }
@@ -102,6 +106,8 @@ pipeline {
       steps {
         dir('mi-proyecto-cypress') {
           powershell '''
+            Write-Host "=== Diagnóstico de artefactos ==="
+
             Write-Host "--- Videos Backup ---"
             Get-ChildItem -Recurse videos_backup -ErrorAction SilentlyContinue
 
@@ -110,6 +116,12 @@ pipeline {
 
             Write-Host "--- Mochawesome Report ---"
             Get-ChildItem -Recurse cypress/report -ErrorAction SilentlyContinue
+
+            Write-Host "--- Allure Results ---"
+            Get-ChildItem -Recurse allure-results -ErrorAction SilentlyContinue
+
+            Write-Host "--- Allure Report (HTML) ---"
+            Get-ChildItem -Recurse allure-report -ErrorAction SilentlyContinue
           '''
         }
       }
@@ -131,11 +143,18 @@ pipeline {
 
   post {
     always {
+      echo '=== Archivando artefactos ==='
+
       archiveArtifacts artifacts: 'mi-proyecto-cypress/cypress/report/**', allowEmptyArchive: true
       archiveArtifacts artifacts: 'mi-proyecto-cypress/videos_backup/**', allowEmptyArchive: true
       archiveArtifacts artifacts: 'mi-proyecto-cypress/screenshots_backup/**', allowEmptyArchive: true
       archiveArtifacts artifacts: 'mi-proyecto-cypress/allure-results/**', allowEmptyArchive: true
       archiveArtifacts artifacts: 'mi-proyecto-cypress/allure-report/**', allowEmptyArchive: true
+
+      powershell '''
+        Write-Host "=== XMLs detectados antes de JUnit ==="
+        Get-ChildItem -Recurse "mi-proyecto-cypress/cypress/results/*.xml" -ErrorAction SilentlyContinue
+      '''
 
       junit testResults: 'mi-proyecto-cypress/cypress/results/*.xml', allowEmptyResults: true, keepLongStdio: true
 
